# cortex

./: .cursorrules  .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  USAGE.md  cortex.example.toml  cortex.toml.example  docker-compose.yml  install.sh  stack.yaml
.github/workflows/: ci.yml  docker.yml  release.yml
crates/cortex-client/: Cargo.toml
crates/cortex-client/src/: lib.rs
crates/cortex-core/: Cargo.toml
crates/cortex-core/benches/: storage.rs
crates/cortex-core/examples/: auto_linker.rs  basic_usage.rs  graph_queries.rs  vector_search.rs
crates/cortex-core/src/: api.rs  error.rs  ingest.rs  kinds.rs  lib.rs  relations.rs  tests.rs  types.rs
crates/cortex-core/src/briefing/: cache.rs  engine.rs  ingest.rs  mod.rs  renderer.rs
crates/cortex-core/src/gate/: mod.rs  schema.rs
crates/cortex-core/src/graph/: cache.rs  engine.rs  mod.rs  paths.rs  subgraph.rs  temporal.rs  tests.rs  traversal.rs  types.rs
crates/cortex-core/src/hooks/: mod.rs
crates/cortex-core/src/linker/: auto_linker.rs  config.rs  decay.rs  dedup.rs  metrics.rs  mod.rs  rules.rs  tests.rs
crates/cortex-core/src/policies/: audit.rs  mod.rs  retention.rs
crates/cortex-core/src/prompt/: mod.rs  model.rs  resolver.rs  rollback.rs  selection.rs
crates/cortex-core/src/query/: mod.rs
crates/cortex-core/src/storage/: encrypted.rs  filters.rs  mod.rs  redb_storage.rs  traits.rs
crates/cortex-core/src/vector/: config.rs  embedding.rs  hybrid.rs  index.rs  mod.rs  scoring.rs  tests.rs
crates/cortex-proto/: Cargo.toml  build.rs
crates/cortex-proto/proto/: cortex.proto
crates/cortex-proto/src/: lib.rs
crates/cortex-server/: Cargo.toml
crates/cortex-server/src/: config.rs  lib.rs  main.rs  serve.rs
crates/cortex-server/src/briefing/: mod.rs
crates/cortex-server/src/cli/: agent.rs  audit.rs  backup.rs  briefing.rs  config_cmd.rs  doctor.rs  edge.rs  export.rs  import.rs  init.rs  migrate.rs  mod.rs  node.rs  prompt.rs  search.rs  security.rs  shell.rs  stats.rs  traverse.rs
crates/cortex-server/src/grpc/: conversions.rs  mod.rs  service.rs
crates/cortex-server/src/http/: auth.rs  metrics.rs  mod.rs  prompts.rs  rollback.rs  routes.rs  selection.rs  viz.rs
crates/cortex-server/src/ingest/: mod.rs  nats.rs  stdin.rs
crates/cortex-server/src/mcp/: mod.rs
crates/cortex-server/src/migration/: mod.rs
crates/cortex-server/src/nats/: ingest.rs  mod.rs
crates/cortex-server/src/observability/: mod.rs
crates/cortex-server/tests/: integration_test.rs  sse_test.rs
crates/warren-adapter/: Cargo.toml
crates/warren-adapter/src/: lib.rs  nats.rs  types.rs
docs/blog/: why-we-built-cortex.md
docs/concepts/: architecture.md  auto-linker.md  briefings.md  decay-and-memory.md  graph-model.md  hybrid-search.md  prompt-system.md
docs/contributing/: CONTRIBUTING.md  architecture.md  development.md
docs/getting-started/: configuration.md  first-agent.md  installation.md  quickstart.md
docs/guides/: crewai.md  langchain.md  migration.md  multi-agent.md  openclaw.md  production.md  prompt-management.md
docs/reference/: cli.md  config.md  go-sdk.md  grpc-api.md  http-api.md  python-sdk.md  rust-sdk.md  typescript-sdk.md
docs/skills/: cortex-navigation.md
examples/crewai-team/: README.md  crew.py  requirements.txt
examples/langchain-agent/: README.md  agent.py  requirements.txt
examples/personal-assistant/: README.md  assistant.py  requirements.txt
examples/rag-pipeline/: README.md  pipeline.py
examples/rust-embedded/: Cargo.toml  README.md
examples/rust-embedded/src/: main.rs
mcp-bridge/: cortex-mcp-bridge.js
migrations/: forge-export.json
sdks/go/: README.md  client.go  client_test.go  generate.go  go.mod  go.sum  types.go
sdks/go/proto/: cortex.pb.go  cortex_grpc.pb.go
sdks/go/scripts/: generate_protos.sh
sdks/python/: README.md  pyproject.toml
sdks/python/cortex_memory/: __init__.py  client.py  cortex_pb2.py  cortex_pb2_grpc.py  models.py  testing.py
sdks/python/scripts/: generate_protos.sh
sdks/python/tests/: test_client.py
sdks/typescript/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  testing.ts
sdks/typescript/src/__tests__/: client.test.ts
specs/: 01-foundation.md  02-graph-engine.md  03-vector-layer.md  04-auto-linker.md  05-api-integration.md  06-briefings.md  07-standalone-product.md  07a-core-decoupling.md  07b-cli-library.md  07c-sdks.md  07d-import-adapters.md  07e-access-control.md  07f-observability.md  07g-plugins.md  07h-docs-launch.md  08-mcp-server.md  phase-a-core-decoupling.md  phase-b-cli-library.md  phase-c-access-policies.md  phase-d-sdks.md  phase-e-observability-plugins.md  phase-f-docs-launch.md
