[workspace]
resolver = "2"
members = [
    "crates/cortex-core",
    "crates/cortex-proto",
    "crates/cortex-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike Darlington"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# Storage
redb = "2.1"

# Vector search
fastembed = "4.4"
instant-distance = "0.6"
rayon = "1.10"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Testing
proptest = "1.6"
criterion = "0.5"


