[workspace]
resolver = "2"
members = [
    "crates/cortex-core",
    "crates/cortex-proto",
    "crates/cortex-server",
    "crates/warren-adapter",
    "crates/cortex-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike Darlington"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# Storage
redb = "2.1"

# Vector search
fastembed = "4.4"
instant-distance = "0.6"
rayon = "1.10"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP/Web
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.5"

# NATS
async-nats = "0.38"

# Async helpers
async-trait = "0.1"
futures = "0.3"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Testing
proptest = "1.6"
criterion = "0.5"


