[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
redb.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile = "3.14"

[[bench]]
name = "storage"
harness = false
