[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
redb.workspace = true
fastembed.workspace = true
instant-distance.workspace = true
rayon.workspace = true
log.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile = "3.14"
env_logger.workspace = true

[[bench]]
name = "storage"
harness = false
