[package]
name = "cortex-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types = "0.13"
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build = "0.12"
