[package]
name = "cortex-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Placeholder crate for Phase 5
# Will contain gRPC server, HTTP debug endpoint, and NATS consumer
cortex-core = { path = "../cortex-core" }
cortex-proto = { path = "../cortex-proto" }
