[package]
name = "cortex-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cortex-server"
path = "src/main.rs"

[features]
warren = ["warren-adapter"]
default = ["warren"]

[dependencies]
# Local crates
cortex-core = { path = "../cortex-core" }
cortex-proto = { path = "../cortex-proto" }
warren-adapter = { path = "../warren-adapter", optional = true }

# gRPC/HTTP
tonic.workspace = true
prost.workspace = true
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.5"

# Async runtime
tokio.workspace = true

# NATS
async-nats = "0.38"
futures = "0.3"
async-trait = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log.workspace = true

# Error handling
anyhow = "1.0"
thiserror.workspace = true

# Time
chrono.workspace = true

# Config
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# Database (for migration)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid.workspace = true

[dev-dependencies]
tempfile = "3.14"
