[package]
name = "cortex-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cortex — embedded graph memory for AI agents. Single binary, single file, zero dependencies."
repository = "https://github.com/MikeSquared-Agency/cortex"
homepage = "https://github.com/MikeSquared-Agency/cortex"
documentation = "https://github.com/MikeSquared-Agency/cortex/tree/main/docs"
readme = "../../README.md"
keywords = ["graph", "memory", "ai", "agent", "grpc"]
categories = ["database", "command-line-utilities"]
publish = true

[[bin]]
name = "cortex"
path = "src/main.rs"

[features]
warren = ["warren-adapter"]
default = ["warren"]

[dependencies]
# Local crates
cortex-core = { path = "../cortex-core" }
cortex-client = { path = "../cortex-client" }
cortex-proto = { path = "../cortex-proto" }
warren-adapter = { path = "../warren-adapter", optional = true }

# gRPC/HTTP
tonic.workspace = true
prost.workspace = true
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.5"

# Async runtime
tokio.workspace = true

# NATS
async-nats = "0.38"
futures = "0.3"
async-trait = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log.workspace = true

# Error handling
anyhow = "1.0"
thiserror.workspace = true

# Time
chrono.workspace = true

# Config
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# Database (for migration / direct access)
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
redb.workspace = true

# CLI interactive prompts
inquire = "0.7"
rustyline = "14"

# Backup checksums
sha2 = "0.10"
hex = "0.4"

# Import/export
csv = "1.3"

# Utilities
uuid.workspace = true

[dev-dependencies]
tempfile = "3.14"
